--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,50 @@ body{
     align-items: end;
 }
 
+.material-symbols-outlined{
+    font-size: 20px;
+}
 tr td{ 
     vertical-align: middle;
+}
+
+.right-filter{
+    flex-wrap: wrap;
+    display: flex;
+    gap: 10px;
+}
+.title-filter{
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.content-list-table{
+    overflow-y: auto;
+    width: 100%;
+}
+.filter{
+    margin: 20px 5px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.content-table{
+    height: calc(100vh - 80px);
+    border-top: solid 1px #00000035;
+    background-color: white;
+    font-size: 13px;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 15px;
+    overflow: auto;
+}
+
+@media (max-width: 430px) {
+    .content-table {
+        height: calc(100vh - 150px);
+    }
+    
 }
