--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import 'primeicons/primeicons.css';
 
 :root{
     --blue: #3e8ed0;
@@ -12,9 +18,11 @@
     --purple: #9333ea;
 }
 
-*{
+*:not(.material-symbols-outlined){
+    font-family: 'Poppins';
     font-size: 13px;
 }
+
 .input{
     width: 200px;
 }
@@ -76,9 +84,9 @@ tr td{
     border-top: solid 1px #00000035;
     background-color: white;
     font-size: 13px;
-    border-radius: 3px;
     margin: 5px;
     padding: 15px;
+    padding-bottom: 50px;
     overflow: auto;
 }
 
