--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
     --purple: #9333ea;
 }
 
-*:not(.material-symbols-outlined){
+*:not(.material-symbols-outlined, .p-button-icon){
     font-family: 'Poppins';
     font-size: 13px;
 }
